<resources>
    <string name="app_name">CourseWork</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_image_content_description">logo image</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="no_account_sign_up_text_btn">No account? Sign up</string>
    <string name="liker_text">LIKER</string>
    <string name="name_hint">Name</string>
    <string name="add_photo_btn">Add Photo</string>
    <string name="register_btn">Register</string>
    <string name="home_btn">Home</string>
    <string name="account_btn">Person</string>
    <string name="likes_tv">Likes</string>
    <string name="string_label">Label</string>
    <string name="add_post">Post</string>
    <string name="posts_title">Posts</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="likes_title">Likes</string>
    <string name="account_title">Account</string>
    <string name="edit_btn_text">Edit</string>
    <string name="posts">Posts</string>
    <string name="settings_title">Settings</string>
    <string name="delete_account_btn">Delete Account</string>
</resources>