<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.SignInFragment">

    <ImageView
        android:id="@+id/imViewLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logo_image_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175"
        app:srcCompat="@drawable/like_filled"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="340dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:hint="@string/email_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imViewLogo"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/imViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/liker_text"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password_hint"
        android:inputType="number|numberPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/ed_text_email"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/ed_text_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_text_email" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:backgroundTint="@color/day_btn_color"
        android:text="@string/sign_in_button_text"
        app:layout_constraintEnd_toEndOf="@+id/ed_text_password"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/ed_text_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_text_password" />

    <TextView
        android:id="@+id/sign_up_text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/no_account_sign_up_text_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/sign_in_btn"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@id/sign_in_btn"
        app:layout_constraintTop_toBottomOf="@id/sign_in_btn"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/liker_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liker_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imViewLogo"
        app:layout_constraintStart_toStartOf="@+id/imViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/imViewLogo"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>